<resources>
    <string name="app_name">GastoViagem</string>
    <string name="distance">Distância</string>
    <string name="total_kilometers">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_liter">KMs por litro</string>
    <string name="total_spent">seu gasto total será de:</string>
    <string name="calculate">calcular</string>
    <string name="value_total">R$ 0</string>
    <string name="validation_fill_all_fields">Preencha todos os campos</string>
</resources>